S302T900-245 #time 55m Added sort direction, add tests. ?implement ?test
- Also updated postman collection.
